1.1.0/_sources/developers_guide/ocean/generated/polaris.ocean.model.OceanModelStep.rst.txt
polaris.ocean.model.OceanModelStep
==================================

.. currentmodule:: polaris.ocean.model

.. autoclass:: OceanModelStep

   
   .. automethod:: __init__

   
   .. rubric:: Methods

   .. autosummary::
   
      ~OceanModelStep.__init__
      ~OceanModelStep.add_dependency
      ~OceanModelStep.add_horiz_mesh_input_file
      ~OceanModelStep.add_init_input_file
      ~OceanModelStep.add_input_file
      ~OceanModelStep.add_model_config_options
      ~OceanModelStep.add_namelist_file
      ~OceanModelStep.add_output_file
      ~OceanModelStep.add_property_check
      ~OceanModelStep.add_streams_file
      ~OceanModelStep.add_vert_coord_input_file
      ~OceanModelStep.add_yaml_file
      ~OceanModelStep.check_properties
      ~OceanModelStep.compute_cell_count
      ~OceanModelStep.constrain_resources
      ~OceanModelStep.dynamic_model_config
      ~OceanModelStep.get_horiz_mesh_filename
      ~OceanModelStep.get_init_filename
      ~OceanModelStep.get_vert_coord_filename
      ~OceanModelStep.map_yaml_configs
      ~OceanModelStep.map_yaml_options
      ~OceanModelStep.map_yaml_streams
      ~OceanModelStep.map_yaml_to_namelist
      ~OceanModelStep.open_model_dataset
      ~OceanModelStep.partition
      ~OceanModelStep.process_inputs_and_outputs
      ~OceanModelStep.run
      ~OceanModelStep.runtime_setup
      ~OceanModelStep.set_model_resources
      ~OceanModelStep.set_resources
      ~OceanModelStep.set_shared_config
      ~OceanModelStep.setup
      ~OceanModelStep.update_io_tasks_config
      ~OceanModelStep.update_namelist_eos
      ~OceanModelStep.update_namelist_pio
      ~OceanModelStep.validate_baselines
      ~OceanModelStep.work_path
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~OceanModelStep.cores
      ~OceanModelStep.gpus
      ~OceanModelStep.may_span_nodes
      ~OceanModelStep.min_cores
      ~OceanModelStep.min_gpus
      ~OceanModelStep.component
      ~OceanModelStep.config
      ~OceanModelStep.input_data
      ~OceanModelStep.logger
   
   